# phloem

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: CLAUDE-DEV.md  CLAUDE-DOCS.md  agent-context.md
.claude/commands/: load-context.md  save-context.md
.github/workflows/: ci.yml
configure/: index.html
design/: index.html
design/architecture/: index.html
design/decisions/: index.html
design/decisions/0001-message-bus/: index.html
design/decisions/0002-inversion-of-control/: index.html
design/decisions/0003-llm-provider-abstraction/: index.html
design/decisions/0004-pluggable-knowledge-bases/: index.html
design/decisions/0005-config-driven-roles/: index.html
design/decisions/0006-python-everywhere/: index.html
docs/: configure.md  extend.md  getting-started.md  index.md  install.md  relay-setup.md
docs/design/: architecture.md  index.md
docs/design/decisions/: 0001-message-bus.md  0002-inversion-of-control.md  0003-llm-provider-abstraction.md  0004-pluggable-knowledge-bases.md  0005-config-driven-roles.md  0006-python-everywhere.md  index.md
examples/: roles.example.yaml
extend/: index.html
getting-started/: index.html
install/: index.html
relay-setup/: index.html
search/: search_index.json
src/phloem/: __init__.py  cli.py
src/phloem/adapters/: __init__.py  base.py  claude.py
src/phloem/bus/: __init__.py  nats_client.py
src/phloem/cli/: __init__.py  admin.py  ops.py
src/phloem/config/: __init__.py  roles.py
src/phloem/daemon/: __init__.py  runtime.py
src/phloem/kb/: __init__.py  base.py  filesystem.py
tests/: test_smoke.py
