[project]
name = "phloem"
version = "0.0.1"
description = "An operator-and-agent-fleet coordination substrate over NATS."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "Phloio" }]
keywords = ["agents", "llm", "nats", "orchestration", "claude", "openai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "nats-py>=2.9,<3",
    "pyyaml>=6.0,<7",
    "click>=8.1,<9",
    "pydantic>=2.6,<3",
    "structlog>=24.1,<26",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.40"]

[project.scripts]
phloem = "phloem.cli:main"

[project.urls]
Homepage = "https://github.com/phloio/phloem"
Repository = "https://github.com/phloio/phloem"
Documentation = "https://phloio.github.io/phloem/"
Issues = "https://github.com/phloio/phloem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/phloem"]

[tool.hatch.build.targets.wheel]
packages = ["src/phloem"]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0.0,<6",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "pre-commit>=3.7,<5",
    "anthropic>=0.40",
]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.0,<10",
    "pymdown-extensions>=10.7,<11",
    "mkdocstrings[python]>=0.25,<1",
]

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
files = ["src/phloem", "tests"]
python_version = "3.12"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W",  # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
    "N",    # pep8-naming
]
ignore = [
    "E501",   # LineTooLong
    "E731",   # DoNotAssignLambda
    "TRY003", # Avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S603", "S607"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/phloem"]
